[package]
name = "picobu"
version = "1.0.4"
authors = ["Wojciech Olejnik <divoolej@gmail.com>"]
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils", "filesystem", "game-engines"]
edition = "2018"
description = "A simple, one-command build system for PICO-8 games"
keywords = ["pico8", "pico-8"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Divoolej/picobu.git"

[dependencies]
structopt = "0.2"
hotwatch = "0.3"
ctrlc = { version = "3.1", features = ["termination"] }
